--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "build --output public",
+    "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -14,10 +14,9 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.0",
     "@reduxjs/toolkit": "^2.5.0",
-    "framer-motion": "^11.18.0",
     "leaflet": "^1.9.4",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
     "react-leaflet": "^5.0.0",
